Fix dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,5 +4,4 @@
 :root {
   font-family: Charter, "Bitstream Charter", "Sitka Text", Cambria, serif;
   line-height: 1.8;
-  font-size: 18px;
 }
